[package]
name = "e2e-client"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.*", features = ["serde-serialize"] }
futures = "0.1.*"
js-sys = "0.3.*"
wasm-bindgen-futures = "0.3.*"
serde = { version = "1.0", features = ["derive"]}

[dependencies.e2e-core]
path = "../e2e-core"

[dependencies.web-sys]
version = "0.3.*"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
