[package]
name = "e2e-client"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.wasm-bindgen]
version = "0.2.55"
features = ["serde-serialize"]

[dependencies.e2e-core]
path = "../e2e-core"
features = ["typescript"]