[package]
name = "e2e-core"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4", features = ["serde"] }
serde = { version="1.0", features= ["derive"] }
typescript-definitions = { version="0.1.*", optional=true }
wasm-bindgen = { version = "0.2.*", optional=true }

[features]
default = []
typescript = ["typescript-definitions", "wasm-bindgen"]
