[package]
name = "e2e-grpc"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

prost = "0.6.0"
prost-types = "0.6.0"
tonic = "0.1.0"

[build-dependencies]
tonic-build = "0.1.0"