[package]
name = "e2e-server"
version = "0.1.0"
authors = ["Owen Nelson <onelson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.*"
env_logger = "0.7"
rand = "0.7.2"
log = "0.4.8"

[dependencies.e2e-core]
path = "../e2e-core"

[dependencies.chrono]
version = "0.4"
features = ["serde"]
